--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <version>1.16.12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.xebia</groupId>
+            <artifactId>jackson-lombok</artifactId>
+            <version>1.1</version>
+        </dependency>
 
     </dependencies>
 
